WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
120525
Compile warning fix: In UIProcess/WebColorPicker.cpp.
https://bugs.webkit.org/show_bug.cgi?id=120525
Summary
Compile warning fix: In UIProcess/WebColorPicker.cpp.
Gábor Ábrahám
Reported
2013-08-30 06:34:24 PDT
In Source/WebKit2/UIProcess/WebColorPicker.cpp There is an unused parameter in WebColorPicker::showColorPicker function.
Attachments
Proposed patch
(1.12 KB, patch)
2013-08-30 06:38 PDT
,
Gábor Ábrahám
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Gábor Ábrahám
Comment 1
2013-08-30 06:38:25 PDT
Created
attachment 210100
[details]
Proposed patch
WebKit Commit Bot
Comment 2
2013-08-30 08:27:32 PDT
Comment on
attachment 210100
[details]
Proposed patch Clearing flags on attachment: 210100 Committed
r154885
: <
http://trac.webkit.org/changeset/154885
>
WebKit Commit Bot
Comment 3
2013-08-30 08:27:34 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug