Fix, remove unused parameter in UIProcess/WebColorPicker.cpp. https://bugs.webkit.org/show_bug.cgi?id=120525

Patch by Gabor Abraham <abrhm@inf.u-szeged.hu> on 2013-08-30
Reviewed by Darin Adler.

* UIProcess/WebColorPicker.cpp:
(WebKit::WebColorPicker::showColorPicker):

Canonical link: https://commits.webkit.org/138513@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@154885 268f45cc-cd09-0410-ab3c-d52691b4dbfc